// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <Name /> without throwing 1`] = `
.c8 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: ;
  background-image: none;
  background-color: ;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
  color: ;
  background-color: ;
  border-color: ;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c8:focus {
  outline: 0;
  text-decoration: none;
  background-color: ;
  border-color: ;
}

.c8:hover {
  background-color: ;
  border: solid 0.0625rem;
}

.c8:active,
.c8:active:hover,
.c8:active:focus {
  background-image: none;
  outline: 0;
  background-color: ;
  border-color: ;
}

.c8[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c8:focus {
  background-color: ;
  border-color: ;
}

.c8:hover {
  background-color: ;
  border-color: ;
}

.c8:active,
.c8:active:hover,
.c8:active:focus {
  background-color: ;
  border-color: ;
}

.c8 + button {
  margin-left: 1.25rem;
}

.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: ;
  background-image: none;
  background-color: ;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
  color: ;
  background-color: ;
  border-color: ;
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c9:focus {
  outline: 0;
  text-decoration: none;
  background-color: ;
  border-color: ;
}

.c9:hover {
  background-color: ;
  border: solid 0.0625rem;
}

.c9:active,
.c9:active:hover,
.c9:active:focus {
  background-image: none;
  outline: 0;
  background-color: ;
  border-color: ;
}

.c9[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c9:focus {
  background-color: ;
  border-color: ;
}

.c9:hover {
  background-color: ;
  border-color: ;
}

.c9:active,
.c9:active:hover,
.c9:active:focus {
  background-color: ;
  border-color: ;
}

.c9 + button {
  margin-left: 1.25rem;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c5 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

.c2 {
  padding: 0.35em 0.75em 0.625em;
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  width: 100%;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: ;
  border: 0.0625rem solid;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  color: ;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c6:focus {
  border-color: ;
  outline: 0;
}

.c4 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

.c3 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
  margin: 1.8125rem 0 3.75rem 0;
}

@media only screen and (min-width:0em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-basis: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-basis: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

@media only screen and (min-width:75em) {
  .c1 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-basis: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

<form
  onSubmit={[Function]}
>
  .c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c5 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

.c2 {
  padding: 0.35em 0.75em 0.625em;
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  width: 100%;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: ;
  border: 0.0625rem solid;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  color: ;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c6:focus {
  border-color: ;
  outline: 0;
}

.c4 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

.c3 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
}

@media only screen and (min-width:0em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-basis: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-basis: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

@media only screen and (min-width:75em) {
  .c1 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-basis: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

<div
    className="c0"
  >
    .c0 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c4 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

.c1 {
  padding: 0.35em 0.75em 0.625em;
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  width: 100%;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c5 {
  box-sizing: border-box;
  width: 100%;
  height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: ;
  border: 0.0625rem solid;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  color: ;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c5:focus {
  border-color: ;
  outline: 0;
}

.c3 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

.c2 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
}

@media only screen and (min-width:0em) {
  .c0 {
    -webkit-flex-basis: 100%;
    -ms-flex-basis: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c0 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-basis: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

@media only screen and (min-width:75em) {
  .c0 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-basis: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

<div
      className="c0"
    >
      .c3 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

.c0 {
  padding: 0.35em 0.75em 0.625em;
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  width: 100%;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c4 {
  box-sizing: border-box;
  width: 100%;
  height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: ;
  border: 0.0625rem solid;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  color: ;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c4:focus {
  border-color: ;
  outline: 0;
}

.c2 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

.c1 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
}

<fieldset
        className="c0"
        style={undefined}
      >
        .c2 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

.c3 {
  box-sizing: border-box;
  width: 100%;
  height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: ;
  border: 0.0625rem solid;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  color: ;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c3:focus {
  border-color: ;
  outline: 0;
}

.c1 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

.c0 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
}

<div>
          .c2 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

.c1 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

.c0 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
}

<label
            className="c0"
            form="testNameForm"
          >
            .c0 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

<label
              className="c0"
              htmlFor="GWMJb"
            >
              Name the new deployment group
            </label>
            .c0 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

<small
              className="c0"
            >
              Your services will be deployed to eu-east-1 data center.
            </small>
          </label>
          .c0 {
  box-sizing: border-box;
  width: 100%;
  height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: ;
  border: 0.0625rem solid;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  color: ;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c0:focus {
  border-color: ;
  outline: 0;
}

<input
            className="c0"
            id="GWMJb"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </div>
      </fieldset>
    </div>
  </div>
  .c1 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: ;
  background-image: none;
  background-color: ;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
  color: ;
  background-color: ;
  border-color: ;
}

.c1::-moz-focus-inner,
.c1[type='button']::-moz-focus-inner,
.c1[type='reset']::-moz-focus-inner,
.c1[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c1:-moz-focusring,
.c1[type='button']:-moz-focusring,
.c1[type='reset']:-moz-focusring,
.c1[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c1:focus {
  outline: 0;
  text-decoration: none;
  background-color: ;
  border-color: ;
}

.c1:hover {
  background-color: ;
  border: solid 0.0625rem;
}

.c1:active,
.c1:active:hover,
.c1:active:focus {
  background-image: none;
  outline: 0;
  background-color: ;
  border-color: ;
}

.c1[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c1:focus {
  background-color: ;
  border-color: ;
}

.c1:hover {
  background-color: ;
  border-color: ;
}

.c1:active,
.c1:active:hover,
.c1:active:focus {
  background-color: ;
  border-color: ;
}

.c1 + button {
  margin-left: 1.25rem;
}

.c2 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: ;
  background-image: none;
  background-color: ;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
  color: ;
  background-color: ;
  border-color: ;
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c2:focus {
  outline: 0;
  text-decoration: none;
  background-color: ;
  border-color: ;
}

.c2:hover {
  background-color: ;
  border: solid 0.0625rem;
}

.c2:active,
.c2:active:hover,
.c2:active:focus {
  background-image: none;
  outline: 0;
  background-color: ;
  border-color: ;
}

.c2[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c2:focus {
  background-color: ;
  border-color: ;
}

.c2:hover {
  background-color: ;
  border-color: ;
}

.c2:active,
.c2:active:hover,
.c2:active:focus {
  background-color: ;
  border-color: ;
}

.c2 + button {
  margin-left: 1.25rem;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
  margin: 1.8125rem 0 3.75rem 0;
}

<div
    className="c0"
  >
    .c0 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: ;
  background-image: none;
  background-color: ;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
  color: ;
  background-color: ;
  border-color: ;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c0:focus {
  outline: 0;
  text-decoration: none;
  background-color: ;
  border-color: ;
}

.c0:hover {
  background-color: ;
  border: solid 0.0625rem;
}

.c0:active,
.c0:active:hover,
.c0:active:focus {
  background-image: none;
  outline: 0;
  background-color: ;
  border-color: ;
}

.c0[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c0:focus {
  background-color: ;
  border-color: ;
}

.c0:hover {
  background-color: ;
  border-color: ;
}

.c0:active,
.c0:active:hover,
.c0:active:focus {
  background-color: ;
  border-color: ;
}

.c0 + button {
  margin-left: 1.25rem;
}

<button
      className="c0"
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
    .c0 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: ;
  background-image: none;
  background-color: ;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
  color: ;
  background-color: ;
  border-color: ;
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c0:focus {
  outline: 0;
  text-decoration: none;
  background-color: ;
  border-color: ;
}

.c0:hover {
  background-color: ;
  border: solid 0.0625rem;
}

.c0:active,
.c0:active:hover,
.c0:active:focus {
  background-image: none;
  outline: 0;
  background-color: ;
  border-color: ;
}

.c0[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c0:focus {
  background-color: ;
  border-color: ;
}

.c0:hover {
  background-color: ;
  border-color: ;
}

.c0:active,
.c0:active:hover,
.c0:active:focus {
  background-color: ;
  border-color: ;
}

.c0 + button {
  margin-left: 1.25rem;
}

<button
      className="c0"
      disabled={true}
      type="submit"
    >
      Next
    </button>
  </div>
</form>
`;

exports[`renders <Name /> without throwing 2`] = `
.c8 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: ;
  background-image: none;
  background-color: ;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
  color: ;
  background-color: ;
  border-color: ;
}

.c8::-moz-focus-inner,
.c8[type='button']::-moz-focus-inner,
.c8[type='reset']::-moz-focus-inner,
.c8[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c8:-moz-focusring,
.c8[type='button']:-moz-focusring,
.c8[type='reset']:-moz-focusring,
.c8[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c8:focus {
  outline: 0;
  text-decoration: none;
  background-color: ;
  border-color: ;
}

.c8:hover {
  background-color: ;
  border: solid 0.0625rem;
}

.c8:active,
.c8:active:hover,
.c8:active:focus {
  background-image: none;
  outline: 0;
  background-color: ;
  border-color: ;
}

.c8[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c8:focus {
  background-color: ;
  border-color: ;
}

.c8:hover {
  background-color: ;
  border-color: ;
}

.c8:active,
.c8:active:hover,
.c8:active:focus {
  background-color: ;
  border-color: ;
}

.c8 + button {
  margin-left: 1.25rem;
}

.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: ;
  background-image: none;
  background-color: ;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
  color: ;
  background-color: ;
  border-color: ;
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c9:focus {
  outline: 0;
  text-decoration: none;
  background-color: ;
  border-color: ;
}

.c9:hover {
  background-color: ;
  border: solid 0.0625rem;
}

.c9:active,
.c9:active:hover,
.c9:active:focus {
  background-image: none;
  outline: 0;
  background-color: ;
  border-color: ;
}

.c9[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c9:focus {
  background-color: ;
  border-color: ;
}

.c9:hover {
  background-color: ;
  border-color: ;
}

.c9:active,
.c9:active:hover,
.c9:active:focus {
  background-color: ;
  border-color: ;
}

.c9 + button {
  margin-left: 1.25rem;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c5 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

.c2 {
  padding: 0.35em 0.75em 0.625em;
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  width: 100%;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: ;
  border: 0.0625rem solid;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  color: ;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c6:focus {
  border-color: ;
  outline: 0;
}

.c4 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

.c3 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
}

.c7 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
  margin: 1.8125rem 0 3.75rem 0;
}

@media only screen and (min-width:0em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-basis: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-basis: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

@media only screen and (min-width:75em) {
  .c1 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-basis: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

<form
  onSubmit={[Function]}
>
  .c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
}

.c1 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c5 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

.c2 {
  padding: 0.35em 0.75em 0.625em;
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  width: 100%;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: ;
  border: 0.0625rem solid;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  color: ;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c6:focus {
  border-color: ;
  outline: 0;
}

.c4 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

.c3 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
}

@media only screen and (min-width:0em) {
  .c1 {
    -webkit-flex-basis: 100%;
    -ms-flex-basis: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c1 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-basis: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

@media only screen and (min-width:75em) {
  .c1 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-basis: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

<div
    className="c0"
  >
    .c0 {
  box-sizing: border-box;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  padding-right: 0.5rem;
  padding-left: 0.5rem;
}

.c4 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

.c1 {
  padding: 0.35em 0.75em 0.625em;
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  width: 100%;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c5 {
  box-sizing: border-box;
  width: 100%;
  height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: ;
  border: 0.0625rem solid;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  color: ;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c5:focus {
  border-color: ;
  outline: 0;
}

.c3 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

.c2 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
}

@media only screen and (min-width:0em) {
  .c0 {
    -webkit-flex-basis: 100%;
    -ms-flex-basis: 100%;
    flex-basis: 100%;
    max-width: 100%;
    display: block;
  }
}

@media only screen and (min-width:64em) {
  .c0 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-basis: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

@media only screen and (min-width:75em) {
  .c0 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-basis: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
    display: block;
  }
}

<div
      className="c0"
    >
      .c3 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

.c0 {
  padding: 0.35em 0.75em 0.625em;
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  width: 100%;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c4 {
  box-sizing: border-box;
  width: 100%;
  height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: ;
  border: 0.0625rem solid;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  color: ;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c4:focus {
  border-color: ;
  outline: 0;
}

.c2 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

.c1 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
}

<fieldset
        className="c0"
        style={undefined}
      >
        .c2 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

.c3 {
  box-sizing: border-box;
  width: 100%;
  height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: ;
  border: 0.0625rem solid;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  color: ;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c3:focus {
  border-color: ;
  outline: 0;
}

.c1 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

.c0 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
}

<div>
          .c2 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

.c1 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

.c0 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
}

<label
            className="c0"
            form="testNameForm"
          >
            .c0 {
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: ;
  margin-right: 0.75rem;
  font-weight: bold;
}

<label
              className="c0"
              htmlFor="cCrMLd"
            >
              Name the new deployment group
            </label>
            .c0 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  line-height: 1.125rem;
  font-size: 0.875rem;
}

<small
              className="c0"
            >
              Your services will be deployed to eu-east-1 data center.
            </small>
          </label>
          .c0 {
  box-sizing: border-box;
  width: 100%;
  height: 3rem;
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: ;
  border: 0.0625rem solid;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-weight: 400;
  font-style: normal;
  font-stretch: normal;
  color: ;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c0:focus {
  border-color: ;
  outline: 0;
}

<input
            className="c0"
            id="cCrMLd"
            name="name"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </div>
      </fieldset>
    </div>
  </div>
  .c1 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: ;
  background-image: none;
  background-color: ;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
  color: ;
  background-color: ;
  border-color: ;
}

.c1::-moz-focus-inner,
.c1[type='button']::-moz-focus-inner,
.c1[type='reset']::-moz-focus-inner,
.c1[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c1:-moz-focusring,
.c1[type='button']:-moz-focusring,
.c1[type='reset']:-moz-focusring,
.c1[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c1:focus {
  outline: 0;
  text-decoration: none;
  background-color: ;
  border-color: ;
}

.c1:hover {
  background-color: ;
  border: solid 0.0625rem;
}

.c1:active,
.c1:active:hover,
.c1:active:focus {
  background-image: none;
  outline: 0;
  background-color: ;
  border-color: ;
}

.c1[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c1:focus {
  background-color: ;
  border-color: ;
}

.c1:hover {
  background-color: ;
  border-color: ;
}

.c1:active,
.c1:active:hover,
.c1:active:focus {
  background-color: ;
  border-color: ;
}

.c1 + button {
  margin-left: 1.25rem;
}

.c2 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: ;
  background-image: none;
  background-color: ;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
  color: ;
  background-color: ;
  border-color: ;
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c2:focus {
  outline: 0;
  text-decoration: none;
  background-color: ;
  border-color: ;
}

.c2:hover {
  background-color: ;
  border: solid 0.0625rem;
}

.c2:active,
.c2:active:hover,
.c2:active:focus {
  background-image: none;
  outline: 0;
  background-color: ;
  border-color: ;
}

.c2[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c2:focus {
  background-color: ;
  border-color: ;
}

.c2:hover {
  background-color: ;
  border-color: ;
}

.c2:active,
.c2:active:hover,
.c2:active:focus {
  background-color: ;
  border-color: ;
}

.c2 + button {
  margin-left: 1.25rem;
}

.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.5rem;
  margin-left: -0.5rem;
  margin: 1.8125rem 0 3.75rem 0;
}

<div
    className="c0"
  >
    .c0 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: ;
  background-image: none;
  background-color: ;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
  color: ;
  background-color: ;
  border-color: ;
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c0:focus {
  outline: 0;
  text-decoration: none;
  background-color: ;
  border-color: ;
}

.c0:hover {
  background-color: ;
  border: solid 0.0625rem;
}

.c0:active,
.c0:active:hover,
.c0:active:focus {
  background-image: none;
  outline: 0;
  background-color: ;
  border-color: ;
}

.c0[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c0:focus {
  background-color: ;
  border-color: ;
}

.c0:hover {
  background-color: ;
  border-color: ;
}

.c0:active,
.c0:active:hover,
.c0:active:focus {
  background-color: ;
  border-color: ;
}

.c0 + button {
  margin-left: 1.25rem;
}

<button
      className="c0"
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
    .c0 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-weight: 400;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: ;
  background-image: none;
  background-color: ;
  border-radius: 0.25rem;
  border: solid 0.0625rem;
  color: ;
  background-color: ;
  border-color: ;
  box-shadow: 0 0.125rem 0 0 rgba(0,0,0,0.05);
}

.c0::-moz-focus-inner,
.c0[type='button']::-moz-focus-inner,
.c0[type='reset']::-moz-focus-inner,
.c0[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0:-moz-focusring,
.c0[type='button']:-moz-focusring,
.c0[type='reset']:-moz-focusring,
.c0[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c0:focus {
  outline: 0;
  text-decoration: none;
  background-color: ;
  border-color: ;
}

.c0:hover {
  background-color: ;
  border: solid 0.0625rem;
}

.c0:active,
.c0:active:hover,
.c0:active:focus {
  background-image: none;
  outline: 0;
  background-color: ;
  border-color: ;
}

.c0[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c0:focus {
  background-color: ;
  border-color: ;
}

.c0:hover {
  background-color: ;
  border-color: ;
}

.c0:active,
.c0:active:hover,
.c0:active:focus {
  background-color: ;
  border-color: ;
}

.c0 + button {
  margin-left: 1.25rem;
}

<button
      className="c0"
      disabled={true}
      type="submit"
    >
      Next
    </button>
  </div>
</form>
`;
